# sqli

./: .gitignore  Cargo.toml  README.md  TODO.md
.config/sqli/: config  connections.yaml
.github/workflows/: cd.yml  ci.yml
sqli/bookDb/: getBook.sql  getBooks.sql
src/: collection.rs  config.rs  file.rs  file_operations.rs  lib.rs  main.rs  query.rs  settings.rs  tui.rs
src/sql/: factory.rs  interface.rs  mod.rs  postgresql.rs  result.rs  schema.sql
src/tui/: app.rs  collections_pane.rs  event.rs  mod.rs  modal.rs  navigation.rs  results_pane.rs  run.rs  searchable_textarea.rs  traits.rs  ui.rs  workspace_pane.rs
src/tui/panes/: collections.rs  header.rs  mod.rs  pane.rs  results.rs  traits.rs  workspace.rs
src/tui/widgets/: button.rs  connection_select.rs  edit_file_modal.rs  file_modal.rs  file_tree.rs  mod.rs  modal.rs  new_file_modal.rs  password_modal.rs  radio_group.rs  searchable_textarea.rs  select.rs  wide_table.rs
tests/: cli.rs  helpers.rs  tui.rs
tests/snapshots/: tui__collections_pane.snap  tui__edit_file_modal.snap  tui__editing_mode.snap  tui__header_pane_second_connection.snap  tui__header_pane_with_connection.snap  tui__main_ui_layout.snap  tui__modal_dialog.snap  tui__new_file_modal.snap  tui__results_pane_with_data.snap  tui__workspace_pane_with_content.snap
