[package]
name = "sqli"
version = "0.1.0"
authors = ["Jarrod Servilla <jarrod.servilla@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool for interacting with SQL databases"
readme = "README.md"
homepage = "https://github.com/jcserv/sqli"
repository = "https://github.com/jcserv/sqli"
keywords = ["cli", "env", "config", "environment"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.30", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.1", features = ["chrono", "postgres", "runtime-async-std-native-tls", "uuid"] }
tokio = { version = "1.43.0", features = ["full", "macros"] }
