[package]
name = "sqli"
version = "1.0.3"
authors = ["Jarrod Servilla <jarrod.servilla@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool for interacting with Postgres databases"
readme = "README.md"
homepage = "https://github.com/jcserv/sqli"
repository = "https://github.com/jcserv/sqli"
keywords = ["cli", "env", "config", "environment"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
csv = "1.3.1"
dirs = "6.0.0"
futures = { version = "0.3.31", features = ["executor"] }
ratatui = "0.29.0"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.1", features = ["chrono", "postgres", "runtime-async-std-native-tls"] }
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full", "macros"] }
tui-textarea = "0.7.0"
tui-tree-widget = "0.23.0"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = "1.42.1"
pgtemp = "0.6.0"
predicates = "3.1.3"
tempfile = "3.17.1"
